[tool.poetry]
name = "luna"
version = "0.1.0"
description = "desc"
authors = ["hadson0 <hadsonsb2221@gmail.com>"]
license = "license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gTTS = "^2.3.1"
PyAutoGUI = "^0.9.53"
SpeechRecognition = "^3.9.0"
spotipy = "^2.22.1"
pyaudio = "^0.2.13"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
prospector = "^1.8.4"
pep8 = "^1.7.1"
pylint = "^2.15.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
